INT-3045: Add `ZeroMqChannel` support
JIRA: https://jira.spring.io/browse/INT-3045

Provide a `SubscribableChannel` implementation for ZeroMQ

The general idea is to let to have a distributed channel implementation
where every client can connect to a single server backed by the channel.

The logic in the channel is fully transparent for end-user and there is just
enough to send message to it and subscribe for receiving on the other side.
If PUB/SUB model is used, all the subscribes (even over the network) going to
receive the same published message.
In case of PUSH/PULL only one subscriber in the whole cluster is going to get
the published message

* Use Reactor for better threading control
* JeroMQ is not interruptible-friendly: use control sockets to stop proxy loop
* Name Reactor's schedulers to avoid daemon threads

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ ext {
 	javaxAnnotationVersion= '1.3.2'
 	javaxMailVersion = '1.6.2'
 	jaxbVersion = '2.3.3'
+	jeroMqVersion = '0.5.2'
 	jmsApiVersion = '2.0.1'
 	jpa21ApiVersion = '1.0.2.Final'
 	jpaApiVersion = '2.2.1'
@@ -861,6 +862,14 @@ project('spring-integration-xmpp') {
 
 		testImplementation project(':spring-integration-stream')
 		testImplementation "org.igniterealtime.smack:smack-experimental:$smackVersion"
+	}
+}
+
+project('spring-integration-zeromq') {
+	description = 'Spring Integration ZeroMQ Support'
+	dependencies {
+		api project(':spring-integration-core')
+		api "org.zeromq:jeromq:$jeroMqVersion"
 	}
 }
 
